--- a/src/components/Calculator/calculator.scss
+++ b/src/components/Calculator/calculator.scss
@@ -42,11 +42,11 @@ h1 {
 
 .output {
   height: 140px;
-  box-shadow: inset 0px 0px 20px #d1ffef;
+  // box-shadow: inset 0px 0px 20px #d1ffef;
   text-align: right;
   font-size: 2.8 rem;
   display: flex;
-  opacity: 46.5%;
+  // opacity: 46.5%;
   background-color: #c5c5c5;
   border: 1px solid black;
   flex-direction: column;
