--- a/src/components/temperature.css
+++ b/src/components/temperature.css
@@ -14,6 +14,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: white;   
+    margin: 0px 0px 150px 0px;
 }
 
 .main label{
